--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.jboss.maven.plugin>7.4.Final</version.jboss.maven.plugin>
+        <version.jboss.maven.plugin>7.7.Final</version.jboss.maven.plugin>
         <version.jboss.bom>1.0.6.Final</version.jboss.bom>
         <version.compiler.plugin>2.3.1</version.compiler.plugin>
         <version.surefire.plugin>2.10</version.surefire.plugin>
@@ -156,6 +156,7 @@
 
 
     <build>
+        <defaultGoal>clean package jboss-as:run</defaultGoal>
         <plugins>
             <!-- Compiler plugin enforces Java 1.6 compatibility and activates annotation 
                 processors -->
