--- a/delivery/web/pom.xml
+++ b/delivery/web/pom.xml
@@ -127,11 +127,11 @@
                     <warName>clean-architecture</warName>
                 </configuration>
             </plugin>
-            <!-- The JBoss AS plugin deploys your war to a local JBoss AS container -->
-            <!-- To use, run: mvn package jboss-as:deploy -->
+            <!-- The Wildfly plugin deploys your war to a local Wildfly container -->
+            <!-- To use, run: mvn package wildfly:deploy -->
             <plugin>
-                <groupId>org.jboss.as.plugins</groupId>
-                <artifactId>jboss-as-maven-plugin</artifactId>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
                 <configuration>
                     <skip>false</skip>
                     <filename>clean-architecture.war</filename>
