--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,13 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <version.jboss.maven.plugin>7.7.Final</version.jboss.maven.plugin>
+        <version.wildfly.maven.plugin>1.1.0.Alpha8</version.wildfly.maven.plugin>
         <version.jboss.bom>1.0.6.Final</version.jboss.bom>
         <version.compiler.plugin>2.3.1</version.compiler.plugin>
         <version.surefire.plugin>2.10</version.surefire.plugin>
-        <version.war.plugin>2.1.1</version.war.plugin>
-        <maven.compiler.target>1.7</maven.compiler.target>
-        <maven.compiler.source>1.7</maven.compiler.source>
+        <version.war.plugin>2.6</version.war.plugin>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <maven.compiler.source>1.8</maven.compiler.source>
     </properties>
 
     <dependencyManagement>
@@ -113,7 +113,7 @@
             <dependency>
                 <groupId>com.h2database</groupId>
                 <artifactId>h2</artifactId>
-                <version>1.3.172</version>
+                <version>1.4.191</version>
                 <scope>test</scope>
             </dependency>
 
@@ -158,22 +158,16 @@
     <build>
         <defaultGoal>clean package jboss-as:run</defaultGoal>
         <plugins>
-            <!-- Compiler plugin enforces Java 1.6 compatibility and activates annotation 
-                processors -->
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>${version.compiler.plugin}</version>
-            </plugin>
 
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.17</version>
+                <version>2.19.1</version>
             </plugin>
 
             <plugin>
-                <groupId>org.jboss.as.plugins</groupId>
-                <artifactId>jboss-as-maven-plugin</artifactId>
-                <version>${version.jboss.maven.plugin}</version>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>${version.wildfly.maven.plugin}</version>
                 <configuration>
                     <skip>true</skip>
                 </configuration>
