--- a/delivery/web/pom.xml
+++ b/delivery/web/pom.xml
@@ -94,7 +94,7 @@
 
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
+            <artifactId>mockito-core</artifactId>
             <scope>test</scope>
         </dependency>
 
