--- a/pom.xml
+++ b/pom.xml
@@ -133,8 +133,8 @@
 
             <dependency>
                 <groupId>org.mockito</groupId>
-                <artifactId>mockito-all</artifactId>
-                <version>1.9.5</version>
+                <artifactId>mockito-core</artifactId>
+                <version>2.6.8</version>
                 <scope>test</scope>
             </dependency>
 
